...
        
        return appDescriptionView
    }()
    
    private lazy var moreButton: UIButton = {
        let moreButton = UIButton()
        moreButton.accessibilityIdentifier = "descriptionMoreButton"
        moreButton.isHidden = true
        moreButton.contentHorizontalAlignment = .right
        moreButton.titleLabel?.font = .systemFont(ofSize: 13.0, weight: .light)
        moreButton.setTitleColor(.systemBlue, for: .normal)
        moreButton.addTarget(self, action: #selector(clickMoreButton), for: .touchUpInside)
        moreButton.translatesAutoresizingMaskIntoConstraints = false
...
    }()
    
    // MARK: - Override function
    
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)
        self.accessibilityIdentifier = "descriptionCell"
        
        self.selectionStyle = .none
        addContentView()
        setAutolayout()
    }
    
...
