...
    }()
    
    // MARK: - Override function
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.tableView.accessibilityIdentifier = "recentSearchList"
        
        self.view.backgroundColor = .white
        self.tableView.separatorStyle = .none
        self.tableView.register(RecentTableViewCell.self, forCellReuseIdentifier: RecentTableViewCell.reuseIdentifier)
        
        setNavigationBar()
...
}

// MARK: - Custom function

extension SearchHomeTableVC {
    func setNavigationBar() {
        self.navigationController?.navigationBar.accessibilityIdentifier = "searchNavigationBar"
        
        // 상단 검색 Title 셋팅
        self.navigationItem.title = "검색"
        
        // 우측 상단 프로필 버튼 셋팅
        guard let classType = NSClassFromString("_UINavigationBarLargeTitleView") else { return }
...
